<resources>
    <string name="app_name">Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="set_alarm">set alarm</string>
    <string name="title_activity_ring">Ring</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="your_info_header">Your info</string>
    <string name="accountability_partner_header">Accountablility Partner</string>
    <string name="alarm_settings_header">Alarm Settings</string>

    <!--Accountability Partner Settings -->
    <string name="send_sms">Send SMS</string>
    <string name="send_sms_summary">Should we send an SMS to your accountability partner when you snoooze?</string>
    <string name="partner_phone">"Accountability Partner's phone number"</string>
    <string name="partner_phone_summary">Who should we send an SMS to?</string>

    <!-- Your Info Settings -->
    <string name="username">Your name:</string>
    <string name="username_summary">What name do you want us to use when we send an SMS to your accountability partner?</string>


    <string name="_5">5</string>
    <string name="daily_alarm">repeat daily</string>
    <string name="snooze_amount_minutes">snooze amount (minutes):</string>
    <string name="set_weekly_alarm">weekly schedule:</string>
    <string name="request_send_sms_message">Please provide permission to send SMS messages.</string>
</resources>